selfhost/test/typechecker/assignment/variable_error_type_mismatch.2.out
Error at %FILE_NAME%:2:5
Type mismatch
  |  a = #{}
         ^
Expected: Int[]
but instead found: Set<<unknown>>
